[package]
name = "hyle-contracts"
description = "Metadata of hyle built-in contracts"
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = "1.81"
include = [
  "build.rs",
  "metadata.rs",
  "amm/amm.img",
  "amm/amm.txt",
  "hydentity/hydentity.img",
  "hydentity/hydentity.txt",
  "hyllar/hyllar.img",
  "hyllar/hyllar.txt",
  "risc0-recursion/risc0-recursion.img",
  "risc0-recursion/risc0-recursion.txt",
  "staking/staking.img",
  "staking/staking.txt",
  "uuid-tld/uuid-tld.img",
  "uuid-tld/uuid-tld.txt",
]

[lib]
path = "metadata.rs"

[dependencies]
sdk = { workspace = true }

[build-dependencies]
risc0-build = { version = "2.0.1", optional = true }


[package.metadata.risc0]
methods = [
  "amm",
  "hyllar",
  "hydentity",
  "staking",
  "risc0-recursion",
  "uuid-tld",
]

[features]
build = ["dep:risc0-build"]
nonreproducible = ["build"]
