[package]
name = "hyle-contracts"
description = "Metadata of hyle built-in contracts"
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = "1.81"

[lib]
path = "metadata.rs"

[dependencies]
sdk = { workspace = true }

[build-dependencies]
risc0-build = { version = "2.0.1", optional = true }

[package.metadata.risc0]
methods = [
  "amm",
  "hyllar",
  "hydentity",
  "staking",
  "risc0-recursion",
  "uuid-tld",
]

[features]
build = ["dep:risc0-build"]
nonreproducible = ["build", "all"]

# Following features are used to choose which contracts should be rebuild with docker
all = ["amm", "hyllar", "hydentity", "staking", "risc0-recursion", "uuid-tld"]
amm = []
hyllar = []
hydentity = []
staking = []
risc0-recursion = []
uuid-tld = []
