[package]
name = "hyle-crypto"
description = "Hyli module for cryptographic operations"
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
hyle-model = { workspace = true, features = ["full"] }

blst = { version = "0.3.14" }
anyhow = "1.0.96"
borsh = "1.5.6"
rand = { version = "0.9" }
hex = "0.4.3"

keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
], optional = true }
whoami = { version = "1.5.2", optional = true }

[features]
default = []

# Disable dependency keyring by default, as it requires libdbus
keyring = ["dep:keyring", "dep:whoami"]
