[package]
name = "hyle-loadtest"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
tokio = "1.42"
hyllar = { path = "../contracts/hyllar", features = ["client"] }
hydentity = { path = "../contracts/hydentity", features = ["client"] }
hyle-contracts = { path = "../contracts", package = "hyle-contracts" }
hyle-contract-sdk = { path = "../contract-sdk" }
client-sdk = { path = "../client-sdk", features = ["tcp", "risc0"] }

anyhow = "1.0.95"
borsh = "1.5.5"
clap = { version = "4.5.29", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = "0.3"
