[package]
name = "hyle-loadtest"
description = "Hyle loadtest tooling"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
tokio = "1.42"
hyllar = { workspace = true, features = ["client"] }
hydentity = { workspace = true, features = ["client"] }
hyle-contracts = { workspace = true }
hyle-contract-sdk = { workspace = true, features = ["tracing"] }
client-sdk = { workspace = true, features= ["tcp", "risc0"] }

anyhow = "1.0.96"
borsh = "1.5.5"
clap = { version = "4.5.31", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
