[package]
name = "hyle-loadtest"
description = "Hyli loadtest tooling"
license-file.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
tokio = "1.44"
hyllar = { workspace = true, features = ["client"] }
hydentity = { workspace = true, features = ["client"] }
hyle-contracts = { workspace = true }
hyle-contract-sdk = { workspace = true, features = ["tracing"] }
client-sdk = { workspace = true, features = ["rest", "risc0"] }
anyhow = "1.0.98"
borsh = "1.5.6"
clap = { version = "4.5.38", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9.0"
