[package]
name = "hyle-model"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
bincode = "2.0.0-rc.3"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }

sha3 = { version = "0.10.8", optional = true }
blst = { version = "0.3.13", optional = true }
strum_macros = { version = "0.26.4", optional = true }
derive_more = { version = "1.0.0", features = ["display"], optional = true }
base64 = { version = "0.22.1", optional = true }
anyhow = { version = "1.0.95", optional = true }
sqlx = { version = "0.8.3", features = ["postgres"], optional = true }
serde_with = { version = "3.12.0", features = ["hex"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["full"] # disable default feature if you want minimalist definitions for contracts
full = [
  "dep:sha3",
  "dep:strum_macros",
  "dep:blst",
  "dep:base64",
  "dep:derive_more",
  "dep:serde_json",
  "dep:serde_with",
  "dep:anyhow"
]
sqlx = ["dep:sqlx"]
