[package]
name = "hyle-model"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = "1.81"

[dependencies]
borsh = { version ="1.5.5", features = ["derive", "rc"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive", "rc"] }

readonly = "0.2.12"
sha3 = { version = "0.10.8", optional = true }
blst = { version = "0.3.13", optional = true }
strum_macros = { version = "0.27.0", optional = true }
derive_more = { version = "2.0.1", features = ["display"], optional = true }
base64 = { version = "0.22.1", optional = true }
anyhow = { version = "1.0.95", optional = true }
sqlx = { version = "0.8.3", features = ["postgres"], optional = true }
serde_with = { version = "3.12.0", features = ["hex"], optional = true }
serde_json = { version = "1", optional = true }
utoipa = { version = "5.3.1", optional = true}
strum = "0.27.0"

[features]
default = ["full"] # disable default feature if you want minimalist definitions for contracts
full = [
  "dep:sha3",
  "dep:strum_macros",
  "dep:blst",
  "dep:base64",
  "dep:derive_more",
  "dep:serde_json",
  "dep:serde_with",
  "dep:anyhow",
  "dep:utoipa"
]
sqlx = ["dep:sqlx"]
