[package]
name = "hyle-model"
description = "Hyli datamodel"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = "1.81"

[dependencies]
borsh = { version = "1.5.6", features = ["derive", "rc"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive", "rc"] }

readonly = "0.2.12"
sha3 = { version = "0.10.8", optional = true }
blst = { version = "0.3.14", optional = true }
strum_macros = { version = "0.27.1", optional = true }
derive_more = { version = "2.0.1", features = ["display"] }
base64 = { version = "0.22.1", optional = true }
anyhow = { version = "1.0.98", optional = true }
sqlx = { version = "0.8.4", features = ["postgres"], optional = true }
serde_with = { version = "3.12.0", features = ["hex"], optional = true }
serde_json = { version = "1", optional = true }
utoipa = { version = "5.3.1", optional = true }
sha2 = { version = "=0.10.8", optional = true }                          # precompile patched at workspace root
secp256k1 = { version = "0.31.0", optional = true }
strum = "0.27.1"

[features]
# disable default feature if you want minimalist definitions for contracts
default = ["full"]
full = [
  "dep:sha3",
  "dep:strum_macros",
  "dep:blst",
  "dep:base64",
  "dep:serde_json",
  "dep:serde_with",
  "dep:anyhow",
  "dep:utoipa",
  "dep:secp256k1",
  "dep:sha2",
]
sqlx = ["dep:sqlx"]
