[package]
name = "hyle-net"
description = "Hyle network SDK"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
sdk = { workspace = true, default-features = false, features = [
    "full-model",
] }

anyhow = "1.0.96"
borsh = "1.5.5"
tracing = "0.1"

# Tcp feature
tokio = { version = "1.42.0", features = ["full", "tracing"], optional = true }
tokio-util = { version = "0.7.14"}
futures = { version = "0.3.31" }

turmoil = { version = "0.6.6", optional = true }

bytes = { version = "1.10.0" }
axum = { version = "0.8.1", features = ["ws", "macros"] }
paste = { version = "1.0.15"}
hyper = "1.6.0"
pin-project-lite = "0.2.16"
tower = "0.5.2"
hyper-util = "0.1.10"
serde_json = "1.0.140"
http-body-util = "0.1.3"
serde = "1.0.219"

[features]
default = ["turmoil"]
tokio = ["dep:tokio"]
turmoil = ["dep:turmoil"]
