[package]
name = "hyle-net"
description = "Hyli network SDK"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
sdk = { workspace = true, default-features = false, features = ["full-model"] }
hyle-crypto = { workspace = true }

anyhow = "1.0.96"
borsh = "1.5.5"
tracing = "0.1"

# Tcp feature
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.14", features = ["codec"] }
futures = { version = "0.3.31" }

turmoil = { version = "0.6.6", optional = true }

bytes = { version = "1.10.0" }
hex = { version = "0.4.3" }
paste = { version = "1.0.15" }
serde_json = "1.0.140"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = "0.1.10"
serde = "1.0.219"
axum = "0.8.3"
tower-service = "0.3.3"
opentelemetry = "0.28.0"

[dev-dependencies]
rand = { version = "0.8.5", features = ["std"] }
seq-macro = "0.3.6"
test-log = { version = "0.2.17", features = [
  "color",
  "trace",
], default-features = false }

[features]
# default = ["turmoil"]
turmoil = ["dep:turmoil"]
