[package]
name = "hyle-verifiers"
description = "Hyle verifiers"
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
hyle-model = { workspace = true }

serde_json = { version = "1.0.140", optional = true }
anyhow = "1.0.98"
borsh = "1.5.6"
rand = { version = "0.9" }
risc0-zkvm = { version = "2.0.0", default-features = false, features = ["std"] }
tracing = "0.1"
hex = "0.4.3"

sp1-sdk = { version = "4.1.3", default-features = false, optional = true }
bincode = { version = "1.3.3", optional = true }

[dev-dependencies]
test-log = { version = "0.2.17", features = [
  "color",
  "trace",
], default-features = false }

[features]
default = []
sp1 = ["dep:sp1-sdk", "dep:bincode", "serde_json"]
