[package]
name = "hyle-verifiers"
description = "Hyli verifiers"
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
hyle-model = { workspace = true }
hyle-crypto = { workspace = true }

serde_json = { version = "1.0.140", optional = true }
anyhow = "1.0.98"
borsh = "1.5.6"
rand = { version = "0.9" }
tracing = "0.1"
hex = "0.4.3"
sha3 = { version = "0.10.8" }
secp256k1 = { version = "0.31.0" }
once_cell = { version = "1.19.0", optional = true }

sp1-sdk = { version = "4.1.3", default-features = false, features = [
  "network",
], optional = true }
risc0-zkvm = { version = "2.0.2", default-features = false, features = [
  "std",
], optional = true }
bincode = { version = "1.3.3", optional = true }

[dev-dependencies]
test-log = { version = "0.2.17", features = [
  "color",
  "trace",
], default-features = false }

[features]
default = []
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-sdk", "dep:bincode", "dep:serde_json", "dep:once_cell"]
