[package]
name = "hyrun"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
hydentity = { path = "../../contracts/hydentity" }
# hystake = { path = "../hystake/contract" }
hyllar = { path = "../../contracts/hyllar" }
amm = { path = "../../contracts/amm" }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
risc0-zkvm = { version = "1.2.0", default-features = false, features = [
    "client",
] }
env_logger = "0.11.6"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
clap = { version = "4.5.23", features = ["derive"] }
base64 = "0.22.1"
bincode = { version = "2.0.0-rc.3" }
hex = "0.4.3"
borsh = "1.5.3"
reqwest = { version = "0.12.8", features = ["blocking"] }
anyhow = "1.0.94"
serde_json = "1.0.134"
