[package]
name = "hyrun"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
sdk = { path = "../contract-sdk", package = "hyle-contract-sdk" }
hydentity = { path = "../contracts/hydentity" }
# hystake = { path = "../hystake/contract" }
hyllar = { path = "../contracts/hyllar" }
amm = { path = "../contracts/amm" }

risc0-zkvm = { version = "1.2.1", default-features = false, features = [
    "client",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
clap = { version = "4.5.26", features = ["derive"] }
hex = "0.4.3"
borsh = "1.5.3"
reqwest = { version = "0.12.12", features = ["blocking"] }
anyhow = "1.0.95"
serde_json = "1.0.135"
