[package]
name = "ponzhyle"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
sdk = { workspace = true, default-features = false, features = ["full-model"] }
client-sdk = { workspace = true, default-features = false, features = [
    "rest",
    "indexer",
    "risc0",
] }
hyle-contracts = { workspace = true }
bonsai-runner = { workspace = true, optional = true }
hyle-net = { workspace = true, features = ["tokio"] }
twitter = { workspace = true, features = ["client"] }
passport = { workspace = true, features = ["client"] }
ponzhyle = { workspace = true, features = ["client"] }

anyhow = "1.0.96"
borsh = "1.5.6"
serde = "1.0"
serde_json = { version = "1" }
tracing = "0.1"

risc0-zkvm = { version = "1.2.3", features = ["prove"], optional = true }

thiserror = "2.0"
tower-http = { version = "0.6.2", features = ["cors"] }
hex = "0.4.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

sp1-sdk = { version = "4.1.3", default-features = false, optional = true }
bincode = { version = "1.3.3", optional = true }

# Rest feature
reqwest = { version = "0.12", features = ["json"], optional = true }

# Tcp feature
tokio = { version = "1.42.0", features = ["full", "tracing"], optional = true }

# Indexer feature, these are re-exported
axum = { version = "0.8.1", optional = true }
utoipa = { version = "5.3.1", optional = true }
utoipa-axum = { version = "0.2.0", optional = true }

[features]
default = ["rest", "indexer", "risc0"]
rest = ["dep:reqwest"]
indexer = ["dep:utoipa", "dep:axum", "dep:utoipa-axum", "dep:tokio"]
risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
sp1 = ["dep:sp1-sdk", "dep:bincode"]
