[package]
name = "hyle-rust-verifiers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
sp1-sdk = "3.4.0"
risc0-zkvm = "1.2.0"

anyhow = "1.0.94"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
hyle-contract-sdk = { path = "../../contract-sdk" }
tracing = "0.1.41"
serde_json = "1.0.133"
