[package]
name = "midenvm-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
miden-assembly = "0.9.2"
miden-stdlib = "0.9.2"
miden-verifier = "0.9.1"
miden-vm = "0.9.1"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
std-lib = "0.1.0"
tracing = "0.1.40"
winter-utils = "0.9.0"
hyle_contract = { path = "../hyle-contract" }
