[package]
name = "amm"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../../../contract-sdk", package = "hyle-contract-sdk", features = [
    "risc0",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
anyhow = "1.0.89"
sha3 = "0.10.8"
bincode = { version = "2.0.0-rc.3" }
