[package]
name = "amm-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "amm-guest"
test = false

[dependencies]
risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
sdk = { path = "../../../contract-sdk", package = "hyle-contract-sdk" }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
amm = { path = "../contract" }
anyhow = "1.0.89"
