[package]
name = "amm-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "amm-guest"
test = false

[dependencies]
risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
sdk = { path = "../../../contract-sdk", package = "hyle-contract-sdk", features = [
    "risc0",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git" }
amm = { path = "../contract" }
